@@ -60,6 +60,79 @@
     <File name="./Tomboy/Addins/Backlinks/BacklinkMenuItem.cs" subtype="Code" buildaction="Compile" />
     <File name="./Tomboy/AddinManager.cs" subtype="Code" buildaction="Compile" />
     <File name="./Tomboy/Addins/Tasks/TasksNoteAddin.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins" subtype="Directory" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins.Database" subtype="Directory" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins.Description" subtype="Directory" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins.Serialization" subtype="Directory" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins/Addin.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins/AddinAttribute.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins/AddinDependencyAttribute.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins/AddinErrorEventArgs.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins/AddinEventArgs.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins/AddinInfo.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins/AddinManager.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins/AddinRegistry.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins/AddinRootAttribute.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins/AddinSessionService.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins/ConditionType.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins/ConsoleProgressStatus.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins/ExtensionAttribute.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins/ExtensionContext.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins/ExtensionNode.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins/ExtensionNodeAttribute.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins/ExtensionNodeChildAttribute.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins/ExtensionNodeList.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins/ExtensionPointAttribute.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins/ExtensionTree.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins/GettextCatalog.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins/IProgressStatus.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins/MissingDependencyException.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins/NodeAttributeAttribute.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins/NodeElement.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins/RuntimeAddin.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins/TreeNode.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins/TreeNodeCollection.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins/TypeExtensionNode.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins/TypeExtensionPointAttribute.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins.Database/AddinDatabase.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins.Database/AddinHostIndex.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins.Database/AddinScanFolderInfo.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins.Database/AddinScanner.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins.Database/AddinScanResult.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins.Database/AddinUpdateData.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins.Database/DatabaseConfiguration.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins.Database/FileDatabase.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins.Database/ProcessProgressStatus.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins.Database/SetupProcess.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins.Database/Util.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins.Description/AddinDependency.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins.Description/AddinDescription.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins.Description/AssemblyDependency.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins.Description/ConditionTypeDescription.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins.Description/ConditionTypeDescriptionCollection.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins.Description/Dependency.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins.Description/DependencyCollection.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins.Description/Extension.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins.Description/ExtensionCollection.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins.Description/ExtensionNodeDescription.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins.Description/ExtensionNodeDescriptionCollection.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins.Description/ExtensionNodeSet.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins.Description/ExtensionNodeSetCollection.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins.Description/ExtensionNodeType.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins.Description/ExtensionNodeTypeCollection.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins.Description/ExtensionPoint.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins.Description/ExtensionPointCollection.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins.Description/ModuleDescription.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins.Description/ModuleDescriptionCollection.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins.Description/NativeDependency.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins.Description/NodeTypeAttribute.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins.Description/NodeTypeAttributeCollection.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins.Description/ObjectDescription.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins.Description/ObjectDescriptionCollection.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins.Serialization/BinaryXmlReader.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins.Serialization/BinaryXmlTypeMap.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins.Serialization/BinaryXmlWriter.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Mono.Addins/Mono.Addins/Mono.Addins.Serialization/IBinaryXmlElement.cs" subtype="Code" buildaction="Compile" />
     <File name="./Tomboy/SyncDialog.cs" subtype="Code" buildaction="Compile" />
     <File name="./Tomboy/FileSystemSyncServer.cs" subtype="Code" buildaction="Compile" />
     <File name="./Tomboy/TomboySyncClient.cs" subtype="Code" buildaction="Compile" />
